test_regress/t/t_inst_paren_bad.v
// DESCRIPTION: Verilator: Verilog Test module
//
// This file ONLY is placed under the Creative Commons Public Domain, for
// any use, without warranty, 2024 by Wilson Snyder.
// SPDX-License-Identifier: CC0-1.0

module sub;
endmodule

module t(/*AUTOARG*/);
   sub sub_inst;  // No ()
endmodule
